--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <h2>
     <a href="https://www.google.com" target="_blankxs">
-        <img src="image/" alt="main_img" width="350">
+        <img src="image/12_4/main_sun.jpeg" alt="main_img" width="350">
     </a>
         
 </h2>
@@ -26,10 +26,10 @@
 <div>
 
     <h2>
-        <a href="https://gkgjswozzang.github.io/hiswoon/hw/hw_main.html">Heewoon</a>
+        <a href="https://gkgjswozzang.github.io/kyucan/map/kyumap_main.html">HisMap</a>
     </h2>
     <h2>
-        <a href="https://gkgjswozzang.github.io/hiswoon/jh/jh_main.html">Junhak</a>
+        <a href="https://gkgjswozzang.github.io/kyucan/feed/kyufeed_main.html">HisThought</a>
     </h2>
     <h2>
         <a href="https://gkgjswozzang.github.io/hiswoon/hj/hj_main.html">Heonjae</a>
