--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <h2>
     <a href="https://www.google.com" target="_blankxs">
-        <img src="image/12_4/main_sun.jpeg" alt="main_img" width="350">
+        <img src="image/12_4/main_sun.jpeg" alt="main_img" width="500">
     </a>
         
 </h2>
@@ -26,13 +26,13 @@
 <div>
 
     <h2>
-        <a href="https://gkgjswozzang.github.io/kyucan/map/kyumap_main.html">HisMap</a>
+        <a href="https://gkgjswozzang.github.io/kyucan/map/kyumap_main.html">Map</a>
     </h2>
     <h2>
-        <a href="https://gkgjswozzang.github.io/kyucan/feed/kyufeed_main.html">HisThought</a>
+        <a href="https://gkgjswozzang.github.io/kyucan/feed/kyufeed_main.html">Feed</a>
     </h2>
     <h2>
-        <a href="https://gkgjswozzang.github.io/hiswoon/hj/hj_main.html">Heonjae</a>
+        <a href="https://gkgjswozzang.github.io/hiswoon/hj/hj_main.html">Pictures</a>
     </h2>
    
 </div>
