--- a/map/kyumap_main.html
+++ b/map/kyumap_main.html
@@ -22,7 +22,10 @@
         <br>
         <a href="https://www.instagram.com/heedongee___/" target="_blank" ><img src="../image/img_main/instagram_logo.png" width="30"></a>
         <br>
-        <p class="hn">적당히 할거면 하지도 않았다</p><br>
+        <p class="hn">Hello. I am kyutae. These are my places.</p><br>
+
+        <iframe src="https://www.google.com/maps/d/embed?mid=11X5eNWEWkcwdFChaYxtwi9DV4CtJDyRO&ehbc=2E312F" width="350"></iframe>
+
         <a href="https://www.instagram.com/heedongee___/">
             <img src="../image/img_hw/hws.jpeg" alt="instagram_heedongee___/"width="300">
         </a><br><br>
