--- a/map/kyumap_main.html
+++ b/map/kyumap_main.html
@@ -20,15 +20,16 @@
 
     <h2>
         <br>
-        <a href="https://www.instagram.com/heedongee___/" target="_blank" ><img src="../image/img_main/instagram_logo.png" width="30"></a>
+        <a href="https://www.google.com" target="_blank" ><img src="../image/img_main/instagram_logo.png" width="30"></a>
         <br>
-        <p class="hn">Hello. I am kyutae. These are my places.</p><br>
+        <p class="hn">This kyuMap.</p><br>
 
-        <iframe src="https://www.google.com/maps/d/embed?mid=11X5eNWEWkcwdFChaYxtwi9DV4CtJDyRO&ehbc=2E312F" width="350"></iframe>
-
-        <a href="https://www.instagram.com/heedongee___/">
-            <img src="../image/img_hw/hws.jpeg" alt="instagram_heedongee___/"width="300">
+        <iframe src="https://www.google.com/maps/d/embed?mid=11X5eNWEWkcwdFChaYxtwi9DV4CtJDyRO&ehbc=2E312F" width="350" height="350"></iframe>
+        <br>
+        <a href="https://www.google.com">
+            <img src="../image/12_4/IMG_68AAC4AE8AFB-1.jpeg" alt="instagram_heedongee___/"height="300">
         </a><br><br>
+        <!--
         <a href="https://www.instagram.com/heedongee___/">
             <img src="../image/img_hw/IMG_0930.JPG" alt="instagram_heedongee___/" width="300">
         </a><br><br>
@@ -39,8 +40,8 @@
             <img src="../image/img_hw/IMG_0931.JPG" alt="instagram_heedongee___/"width="300">
         </a><br><br>
 
-
-        <a href="hw_love.html">
+-->
+        <a href="www.google.com">
             <img src="../image/img_main/Love_Heart_SVG.svg.png" alt="Heewoon_love"width="100">
         </a>
         <br>
