--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="https://gkgjswozzang.github.io/kyucan/feed/kyufeed_main.html">Feed</a>
     </h2>
     <h2>
-        <a href="https://gkgjswozzang.github.io/hiswoon/hj/hj_main.html">Pictures</a>
+        <a href="https://google.com">Pictures</a>
     </h2>
    
 </div>
