--- a/map/kyumap_main.html
+++ b/map/kyumap_main.html
@@ -11,8 +11,8 @@
     <a href="../index.html"><h1>KyuCan</h1></a>
 <br><br>
 
-<p>Memories.<br><br><br>
-   : The Vilan Heewoon</p>
+<p>kyuMap<br><br><br>
+   : His memories flow with this map</p>
 <br><br>
 
 
@@ -45,7 +45,7 @@
             <img src="../image/img_main/Love_Heart_SVG.svg.png" alt="Heewoon_love"width="100">
         </a>
         <br>
-        <p5>His love</p5>
+        <p5>Like</p5>
         <br>
             
     </h2>
