--- a/map/kyumap_main.html
+++ b/map/kyumap_main.html
@@ -22,7 +22,7 @@
         <br>
         <a href="https://www.google.com" target="_blank" ><img src="../image/img_main/instagram_logo.png" width="30"></a>
         <br>
-        <p class="hn">This kyuMap.</p><br>
+        <p class="hn">kyuMap</p><br>
 
         <iframe src="https://www.google.com/maps/d/embed?mid=11X5eNWEWkcwdFChaYxtwi9DV4CtJDyRO&ehbc=2E312F" width="350" height="350"></iframe>
         <br>
